Add fallback font

--- a/source/stylesheets/all.styl
+++ b/source/stylesheets/all.styl
@@ -7,7 +7,7 @@ html, body
   padding 0
 
 body
-  font 16px 'Noto Sans'
+  font 16px 'Noto Sans', sans-serif
   color $body-color
   background black
 
