--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -5,9 +5,9 @@ title: Breath Tuner
 ---
 
 - content_for :head do
-  = stylesheet_link_tag 'index'
+  = stylesheet 'index'
   = javascript_include_tag 'http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js'
-  = javascript_include_tag 'breath-tuner'
+  = javascript 'breath-tuner'
 
 #breathTuner
   .HUD
