Render jQuery in-HTML

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -6,7 +6,7 @@ title: Breath Tuner
 
 - content_for :head do
   = stylesheet 'index'
-  = javascript_include_tag 'http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js'
+  = javascript 'jquery-1.11.1.min'
   = javascript 'breath-tuner'
 
 #breathTuner
