Add licence and link to source

--- a/source/layouts/help.slim
+++ b/source/layouts/help.slim
@@ -3,3 +3,7 @@
 = wrap_layout :layout do
   article
     = yield
+  footer
+    a href='http://www.gnu.org/licenses/gpl-3.0.html' GPLv3
+    | ::
+    a href='https://github.com/tudurwulf/breath-tuner.web' GitHub
