--- a/source/stylesheets/help.css.styl
+++ b/source/stylesheets/help.css.styl
@@ -4,7 +4,7 @@
 article
   font-size 1.2em
   width 30em
-  margin 0 auto 1em
+  margin 0 auto
   padding .1em 1.5em
   border-radius 10px
   -moz-border-radius @border-radius
@@ -15,12 +15,12 @@ article
   h1, h2
     text-align center
 
-  a
-    color $link-color
-    text-decoration none
-
-    &:hover
-      text-decoration underline
-
   ul
     list-style square
+
+footer
+  text-align center
+  margin $nav-footer-margin 0
+
+  a
+    margin 0 .5em
