--- a/source/stylesheets/all.styl
+++ b/source/stylesheets/all.styl
@@ -1,7 +1,6 @@
 $body-color = hsl(0, 0%, 80%)
 $link-color = hsl(210, 80%, 50%)
 $grey-bg = hsl(210, 20%, 15%)
-$nav-footer-margin = .4em // top & bottom
 
 html, body
   margin 0
@@ -30,7 +29,7 @@ selection()
   selection()
 
 nav
-  margin $nav-footer-margin 0
+  margin .2em 0
   text-align right
   cursor default
 
