Render stats table

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -31,7 +31,7 @@ title: BreathTuner
     / div style='width: 1px; height: 100%; background: blue; position: fixed; top: 0; left: 50%; z-index: 100;'
     / div style='width: 100%; height: 1px; background: blue; position: absolute; top: 50%; z-index: 100;'
   .HUD
-    / table#stats.bottom.left
+    table#stats.bottom.left
       tr
         th
         th Average
