Add stats table IDs & defaults

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -39,17 +39,17 @@ title: BreathTuner
         th Ratio
       tr
         th Breath
-        td 40.0s
-        td 60.0m
+        td#breathAvg 0.0
+        td#breathSum 0:00.0
         td
       tr
         th Exhalation
-        td 20.0s
-        td 30.0m
-        td 50.0%
+        td#exhalationAvg 0.0
+        td#exhalationSum 0:00.0
+        td#exhalationRatio 0.0%
       tr
         th Inhalation
-        td 20.0s
-        td 30.0m
-        td 50.0%
+        td#inhalationAvg 0.0
+        td#inhalationSum 0:00.0
+        td#inhalationRatio 0.0%
     #inhalationTimer.bottom.right.counter 0.0
