--- a/source/stylesheets/index.css.styl
+++ b/source/stylesheets/index.css.styl
@@ -108,6 +108,11 @@ $HUDChartSpacing = 10px // space between outside HUD elements and #chart
   th:first-child
     text-align left
 
+#breathAvg,
+#exhalationRatio,
+#inhalationRatio
+  background $grey-bg
+
 #buttons
   margin-left 300px
   user-select none
