Rename: exhalation -> exh, inhalation -> inh

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -12,7 +12,7 @@ title: BreathTuner
 #breathTuner
   .HUD
     #breathNo.top.left.counter 0
-    #exhalationTimer.top.right.counter 0.0
+    #exhTimer.top.right.counter 0.0
     #buttons.right
       #switch
         p Start/Switch
@@ -44,12 +44,12 @@ title: BreathTuner
         td
       tr
         th Exhalation
-        td#exhalationAvg 0.0
-        td#exhalationSum 0:00.0
-        td#exhalationRatio 0.0%
+        td#exhAvg 0.0
+        td#exhSum 0:00.0
+        td#exhRatio 0.0%
       tr
         th Inhalation
-        td#inhalationAvg 0.0
-        td#inhalationSum 0:00.0
-        td#inhalationRatio 0.0%
-    #inhalationTimer.bottom.right.counter 0.0
+        td#inhAvg 0.0
+        td#inhSum 0:00.0
+        td#inhRatio 0.0%
+    #inhTimer.bottom.right.counter 0.0
