--- a/source/stylesheets/index.css.styl
+++ b/source/stylesheets/index.css.styl
@@ -109,8 +109,8 @@ $HUDChartSpacing = 10px // space between outside HUD elements and #chart
     text-align left
 
 #breathAvg,
-#exhalationRatio,
-#inhalationRatio
+#exhRatio,
+#inhRatio
   background $grey-bg
 
 #buttons
