Rename: exhTimer -> exhLen, inhTimer -> inhLen
Now display IDs match stats properties.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -12,7 +12,7 @@ title: BreathTuner
 #breathTuner
   .HUD
     #breathNo.top.left.counter 0
-    #exhTimer.top.right.counter 0.0
+    #exhLen.top.right.counter 0.0
     #buttons.right
       #switch
         p Start/Switch
@@ -52,4 +52,4 @@ title: BreathTuner
         td#breathAvg 0.0
         td#breathSum 0:00.0
         td
-    #inhTimer.bottom.right.counter 0.0
+    #inhLen.bottom.right.counter 0.0
