--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -6,7 +6,7 @@ title: BreathTuner
 
 - content_for :head do
   = stylesheet 'index'
-  = javascript 'jquery-1.11.1.min'
+  = javascript_include_tag 'http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js'
   = javascript 'breath-tuner'
 
 #breathTuner
